# RealityLab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/prototype_runs/: clock_jitter_20260312_194632.csv  ping_latency_20260312_194632.csv  prototype_report_20260312_194632.json
examples/: demo.csv  demo_interactive.py  neuron_spikes.csv  temperature.csv
scripts/: generate_social_preview.py
src/reality_detector/: __init__.py  cli.py  collector.py  core.py  io.py  prototype.py
tests/: test_cli_extended.py  test_detector.py
